Fix homepage background not showing behind nav

--- a/src/sections/sections.module.scss
+++ b/src/sections/sections.module.scss
@@ -1,6 +1,6 @@
 .section-anchor {
   position: relative;
-  padding-top: 50px;
-  margin-top: -50px;
+  padding-top: 100px;
+  margin-top: -100px;
   display: block;
 }
